--- a/src/pages/styles/Dashboard.module.css
+++ b/src/pages/styles/Dashboard.module.css
@@ -1,1 +1,8 @@
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
