--- a/src/pages/styles/Dashboard.module.css
+++ b/src/pages/styles/Dashboard.module.css
@@ -1,6 +1,8 @@
 .background {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 
   width: 100vw;
   height: 100vh;
