--- a/src/colours.css
+++ b/src/colours.css
@@ -4,6 +4,7 @@
   --tertiary: gold;
   --primary_accent: darkgrey;
   --secondary_accent: blue;
+  --text: white;
   --inc: green;
   --dec: red;
 }
