--- a/src/features/styles/DashboardList.module.css
+++ b/src/features/styles/DashboardList.module.css
@@ -1,6 +1,13 @@
 .container {
   display: flex;
   flex-direction: column;
+
+  width: 60vw;
+  height: 80vh;
+
+  margin: 0;
+
+  background: green;
 }
 
 .container ul {
