--- a/src/components/styles/ActionButton.module.css
+++ b/src/components/styles/ActionButton.module.css
@@ -7,6 +7,7 @@
   max-width: 6vw;
 
   background-color: var(--primary);
+  border-color: var(--primary);
   border-radius: 2px;
 
   transition-duration: 0.2s;
