Add 3 style classes to Icon component
- Normal style has light colour
- Good style has green colour
- Bad style has red colour

Replace cross, reload and check SVGs

--- a/src/components/styles/Icon.module.css
+++ b/src/components/styles/Icon.module.css
@@ -1,4 +1,14 @@
-.icon path {
-  stroke-width: 0px;
+.icon-normal path {
+  stroke: var(--light);
+  opacity: 0.8;
+}
+
+.icon-good path {
+  stroke: var(--good);
+  opacity: 0.8;
+}
+
+.icon-bad path {
+  stroke: var(--bad);
   opacity: 0.8;
 }
