--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   background-color: var(--dark);
+  background-image: url("/src/assets/Hexagon-Triangle-Background.svg");
 }
 
 code {
