--- a/src/layouts/styles/RootLayout.module.css
+++ b/src/layouts/styles/RootLayout.module.css
@@ -1,1 +1,32 @@
+.layout {
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: center;
 
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100vw;
+  height: 100vh;
+
+  background-color: orange;
+}
+
+.content {
+  flex: 1 0 auto;
+}
+
+.layout footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  width: 98vw;
+  height: fit-content;
+
+  justify-self: flex-end;
+  background-color: green;
+}
