--- a/src/layouts/styles/RootLayoutHeader.module.css
+++ b/src/layouts/styles/RootLayoutHeader.module.css
@@ -7,6 +7,13 @@
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 6px;
+
+  width: 98vw;
+  height: fit-content;
+
+  flex: 0 0 auto;
+
+  background-color: green;
 }
 
 .header div {
