--- a/src/layouts/styles/RootLayout.module.css
+++ b/src/layouts/styles/RootLayout.module.css
@@ -16,5 +16,11 @@
 
 .content {
   flex: 1 0 auto;
-  background-color: blue;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+
+  width: 98%;
 }
