--- a/src/components/styles/Title.module.css
+++ b/src/components/styles/Title.module.css
@@ -1,9 +1,11 @@
 .title {
   text-align: center;
 
+  margin: 0;
+
   font-size: 60px;
-  height: fit-content;
-  width: fit-content;
+  max-height: fit-content;
+  width: 100%;
 
   color: var(--light);
 
