--- a/src/features/styles/ErrorModal.module.css
+++ b/src/features/styles/ErrorModal.module.css
@@ -1,4 +1,4 @@
-.form {
+.layout {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -7,7 +7,7 @@
 }
 
 .header {
-  background-color: var(--accent2);
+  background-color: var(--bad);
 
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
@@ -24,20 +24,6 @@
   gap: 20px;
 
   padding-left: 40px;
-}
-
-.content-inputs {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  gap: 4px;
-}
-
-.content-inputs input {
-  border-radius: 2px;
-  border: 2px solid var(--dark);
-
-  height: 18px;
 }
 
 .footer {
