--- a/src/components/styles/Text.module.css
+++ b/src/components/styles/Text.module.css
@@ -2,8 +2,10 @@
   text-align: center;
 
   font-size: 12px;
+  font-weight: bold;
 
   height: fit-content;
+  min-width: 8vw;
   width: fit-content;
 
   color: var(--light);
