--- a/src/features/styles/DashboardList.module.css
+++ b/src/features/styles/DashboardList.module.css
@@ -1,11 +1,15 @@
 .container {
+  flex: 1 0 auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: stretch;
   align-items: center;
+  gap: 2vh;
 }
 
 .list {
+  flex: 1 0 fit-content;
+
   list-style: none;
   margin: 0;
   padding: 0;
