--- a/src/features/dashboard/styles/DashboardList.module.css
+++ b/src/features/dashboard/styles/DashboardList.module.css
@@ -1,16 +1,33 @@
 .container {
-  flex: 1 0 auto;
+  flex: 0 0 auto;
   display: flex;
   flex-direction: column;
-  justify-content: stretch;
+  justify-content: flex-start;
   align-items: center;
-  gap: 2vh;
+  gap: 2%;
+
+  height: 88%;
+  width: fit_content;
 }
 
 .list {
-  flex: 1 0 fit-content;
+  flex: 0 0 auto;
+
+  height: 92%;
+  width: 100%;
+  overflow: scroll;
 
   list-style: none;
   margin: 0;
   padding: 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 2%;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
