--- a/src/features/dashboard/styles/DashboardListHeader.module.css
+++ b/src/features/dashboard/styles/DashboardListHeader.module.css
@@ -3,26 +3,35 @@
   flex-direction: row;
   justify-content: flex-end;
   align-items: flex-end;
-  gap: 4vw;
+  gap: 4%;
 
-  height: fit-content;
-  width: 68vw;
+  height: 8%;
+  width: 68%;
 
   margin: 0;
   padding-bottom: 2px;
+
+  background-color: green;
 }
 
 .header h4 {
-  flex: 0 0 auto;
+  flex: 1 0 auto;
+
   font-size: 16px;
   font-weight: bold;
   text-align: center;
 
-  height: fit-content;
-  width: 8vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+
+  height: 100%;
+  width: 10%;
 
   margin: 0;
   padding: 0;
+
+  background-color: red;
 
   color: var(--light);
 }
