--- a/src/features/detail/styles/DetailMenu.module.css
+++ b/src/features/detail/styles/DetailMenu.module.css
@@ -1,20 +1,26 @@
 .container {
-  flex: 1 0 auto;
+  flex: 0 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 2vh;
+  gap: 2%;
 
-  max-width: 68vw;
+  height: 88%;
+  width: 67%;
+
+  background-color: green;
 }
 
 .menu {
-  flex: 1 0 fit-content;
+  flex: 0 0 auto;
 
   list-style: none;
   margin: 0;
   padding: 0;
+
+  height: 100%;
+  width: 100%;
   overflow: scroll;
 
   display: flex;
@@ -22,5 +28,9 @@
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
-  gap: 1vw;
+  gap: 2%;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
