--- a/src/layouts/styles/RootLayout.module.css
+++ b/src/layouts/styles/RootLayout.module.css
@@ -13,12 +13,11 @@
 }
 
 .content {
-  flex: 1 0 auto;
-
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
 
+  height: 88%;
   width: 98%;
 }
