--- a/src/layouts/styles/RootLayoutFooter.module.css
+++ b/src/layouts/styles/RootLayoutFooter.module.css
@@ -4,8 +4,8 @@
   justify-content: center;
   align-items: center;
 
-  width: 98vw;
-  height: fit-content;
+  width: 98%;
+  height: 6%;
 
   justify-self: flex-end;
 }
