--- a/src/layouts/styles/RootLayoutHeader.module.css
+++ b/src/layouts/styles/RootLayoutHeader.module.css
@@ -2,14 +2,10 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
 
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 6px;
-
-  width: 98vw;
-  height: fit-content;
+  width: 98%;
+  height: 6%;
 
   flex: 0 0 auto;
 }
