--- a/src/features/dashboard/styles/DashboardListHeader.module.css
+++ b/src/features/dashboard/styles/DashboardListHeader.module.css
@@ -3,35 +3,35 @@
   flex-direction: row;
   justify-content: flex-end;
   align-items: flex-end;
-  gap: 4%;
+  gap: 2%;
 
   height: 8%;
-  width: 68%;
+  width: 100%;
 
   margin: 0;
   padding-bottom: 2px;
+}
 
-  background-color: green;
+.header div {
+  flex: 0 0 auto;
+
+  height: fit-content;
+  width: 18.4%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .header h4 {
-  flex: 1 0 auto;
+  flex: 1 1 auto;
 
   font-size: 16px;
   font-weight: bold;
   text-align: center;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-
-  height: 100%;
-  width: 10%;
-
   margin: 0;
   padding: 0;
-
-  background-color: red;
 
   color: var(--light);
 }
