--- a/src/features/dashboard/styles/DashboardListItem.module.css
+++ b/src/features/dashboard/styles/DashboardListItem.module.css
@@ -1,16 +1,39 @@
+.link {
+  text-decoration: none;
+
+  width: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
 .container {
+  flex: 0 0 auto;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
-  gap: 4vw;
+  gap: 2%;
 
-  width: 68vw;
+  height: fit-content;
+  width: 100%;
+
+  background-color: var(--dark);
+  border-radius: 4px;
 
   transition-duration: 0.2s;
 }
 
 .container:hover {
-  box-shadow: 2px 2px 4px var(--light);
+  box-shadow: 2px 2px 4px var(--dark);
   transition-duration: 0.2s;
+}
+
+.item {
+  width: 18.4%;
+
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
