Filter detail menu items
Included are:
- current price
- market cap
- high
- low
- price change + percentage
- market cap change + percentage
- circulating, total and max supply
- last updated (time and date)

Fix format of numbers, currency and percentages:
- Each type in their own component

--- a/src/features/dashboard/styles/DashboardList.module.css
+++ b/src/features/dashboard/styles/DashboardList.module.css
@@ -4,15 +4,16 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  gap: 2%;
+  gap: 4%;
 
+  max-height: 92%;
   min-width: 60%;
 }
 
 .list {
   flex: 0 0 auto;
 
-  height: 92%;
+  height: 100%;
   width: 100%;
   overflow: scroll;
 
