--- a/src/features/detail/styles/DetailMenuItem.module.css
+++ b/src/features/detail/styles/DetailMenuItem.module.css
@@ -5,9 +5,9 @@
   align-items: center;
 
   height: 20vh;
-  width: 8vw;
+  width: 20%;
 
-  background-color: var(--accent1);
+  background-color: var(--dark);
   border-radius: 12px;
 }
 
@@ -22,6 +22,6 @@
   height: 60%;
 
   background-color: var(--accent2);
-  border: 2px solid var(--dark);
+  border: 2px solid var(--accent1);
   border-radius: 12px;
 }
