--- a/src/features/detail/styles/DetailMenu.module.css
+++ b/src/features/detail/styles/DetailMenu.module.css
@@ -7,9 +7,7 @@
   gap: 2%;
 
   height: 88%;
-  width: 60%;
-
-  background-color: green;
+  width: 68%;
 }
 
 .menu {
@@ -26,7 +24,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   gap: 2%;
 }
