--- a/src/features/detail/styles/DetailMenuItem.module.css
+++ b/src/features/detail/styles/DetailMenuItem.module.css
@@ -5,7 +5,7 @@
   align-items: center;
 
   height: 20vh;
-  width: 20%;
+  width: 26%;
 
   background-color: var(--dark);
   border-radius: 12px;
@@ -21,7 +21,7 @@
   width: 60%;
   height: 60%;
 
-  background-color: var(--accent2);
-  border: 2px solid var(--accent1);
+  background-color: var(--dark);
+  border: 4px solid var(--accent1);
   border-radius: 12px;
 }
