--- a/src/components/other/styles/Modal.module.css
+++ b/src/components/other/styles/Modal.module.css
@@ -8,7 +8,7 @@
 
   z-index: 10;
 
-  background-color: var(--dark);
+  background-color: rgb(var(--dark));
   opacity: 0.4;
 }
 
@@ -24,7 +24,7 @@
 
   z-index: 100;
 
-  background-color: var(--light);
+  background-color: rgb(var(--light));
 
   border-radius: 20px;
 }
