--- a/src/features/dashboard/styles/DashboardListItem.module.css
+++ b/src/features/dashboard/styles/DashboardListItem.module.css
@@ -19,14 +19,15 @@
   height: fit-content;
   width: 100%;
 
-  background-color: var(--dark);
+  background-color: rgb(var(--dark));
   border-radius: 4px;
 
   transition-duration: 0.2s;
 }
 
 .container:hover {
-  box-shadow: 2px 2px 4px var(--dark);
+  background-color: rgba(var(--dark), 0.6);
+  box-shadow: 2px 2px 4px rgb(var(--dark));
   transition-duration: 0.2s;
 }
 
