--- a/src/features/detail/styles/DetailMenuItem.module.css
+++ b/src/features/detail/styles/DetailMenuItem.module.css
@@ -4,10 +4,10 @@
   justify-content: space-between;
   align-items: center;
 
-  height: 20vh;
+  height: 24%;
   width: 26%;
 
-  background-color: var(--dark);
+  background-color: rgba(var(--dark), 1);
   border-radius: 12px;
 }
 
@@ -21,7 +21,7 @@
   width: 60%;
   height: 60%;
 
-  background-color: var(--dark);
+  background-color: rgba(var(--accent2), 0.4);
   border: 4px solid var(--accent1);
   border-radius: 12px;
 }
