--- a/src/layouts/styles/RootLayout.module.css
+++ b/src/layouts/styles/RootLayout.module.css
@@ -10,6 +10,8 @@
 
   width: 100vw;
   height: 100vh;
+
+  background-image: radial-gradient(rgba(var(--dark), 0.8), rgb(var(--dark)));
 }
 
 .content {
