--- a/src/features/dashboard/styles/DashboardList.module.css
+++ b/src/features/dashboard/styles/DashboardList.module.css
@@ -4,10 +4,12 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  gap: 4%;
+  gap: 2%;
 
   max-height: 92%;
   min-width: 60%;
+
+  margin-top: 1.4%;
 }
 
 .list {
