--- a/src/pages/styles/Error.module.css
+++ b/src/pages/styles/Error.module.css
@@ -1,7 +1,14 @@
 .layout {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   gap: 10vh;
+
+  height: 100vh;
+  width: 100vw;
+
+  padding-top: 2%;
+
+  background-image: radial-gradient(rgba(var(--dark), 0.8), rgb(var(--dark)));
 }
