--- a/src/layouts/styles/RootLayoutHeader.module.css
+++ b/src/layouts/styles/RootLayoutHeader.module.css
@@ -1,8 +1,8 @@
 .header {
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
 
   width: 98%;
   height: 6%;
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-
   gap: 8px;
+
+  flex: 0 0 fit-content;
 }
