--- a/src/layouts/styles/HeaderButton.module.css
+++ b/src/layouts/styles/HeaderButton.module.css
@@ -4,11 +4,11 @@
   align-items: center;
 
   max-height: 6vh;
-  max-width: 4vw;
+  width: 2.8vw;
 
   transition-duration: 0.2s;
   border-style: none;
-  background-color: rgb(var(--dark));
+  background-color: inherit;
 }
 
 .button:hover {
