--- a/src/features/dashboard/styles/DashboardListHeader.module.css
+++ b/src/features/dashboard/styles/DashboardListHeader.module.css
@@ -5,8 +5,10 @@
   align-items: flex-end;
   gap: 2%;
 
-  height: 8%;
+  min-height: 8%;
   width: 100%;
+
+  flex: 1 0 auto;
 
   margin: 0;
   padding-bottom: 2px;
@@ -15,7 +17,7 @@
 .header div {
   flex: 0 0 auto;
 
-  height: fit-content;
+  height: 100%;
   width: 18.4%;
 
   display: flex;
@@ -24,7 +26,7 @@
 }
 
 .header h4 {
-  flex: 1 1 auto;
+  flex: 0 0 auto;
 
   font-size: 16px;
   font-weight: bold;
