--- a/src/features/detail/styles/DetailMenu.module.css
+++ b/src/features/detail/styles/DetailMenu.module.css
@@ -1,25 +1,25 @@
 .container {
-  flex: 0 0 auto;
+  flex: 1 1 fit-content;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 2%;
 
-  height: 88%;
-  width: 68%;
+  max-height: 88%;
+  min-width: 60%;
 }
 
 .menu {
-  flex: 0 0 auto;
+  flex: 1 1 auto;
+
+  height: 100%;
+  width: 100%;
+  overflow: scroll;
 
   list-style: none;
   margin: 0;
   padding: 0;
-
-  height: 92%;
-  width: 100%;
-  overflow: scroll;
 
   display: flex;
   flex-direction: row;
