--- a/src/features/detail/styles/DetailMenuItem.module.css
+++ b/src/features/detail/styles/DetailMenuItem.module.css
@@ -4,11 +4,13 @@
   justify-content: space-between;
   align-items: center;
 
-  height: 24%;
-  width: 26%;
+  height: 200px;
+  width: 280px;
+
+  flex: 0 0 auto;
 
   background-color: rgba(var(--dark), 1);
-  border-radius: 12px;
+  border-radius: 20px;
 }
 
 .item-value {
@@ -23,5 +25,5 @@
 
   background-color: rgba(var(--accent2), 0.4);
   border: 4px solid var(--accent1);
-  border-radius: 12px;
+  border-radius: 20px;
 }
