--- a/src/layouts/styles/HeaderButton.module.css
+++ b/src/layouts/styles/HeaderButton.module.css
@@ -3,8 +3,9 @@
   justify-content: center;
   align-items: center;
 
-  max-height: 6vh;
-  width: 2.8vw;
+  flex: 0 0 auto;
+
+  width: 40px;
 
   transition-duration: 0.2s;
   border-style: none;
