--- a/src/layouts/styles/RootLayoutHeader.module.css
+++ b/src/layouts/styles/RootLayoutHeader.module.css
@@ -13,8 +13,12 @@
 .header div {
   display: flex;
   flex-direction: row;
+  justify-content: flex-end;
   align-items: center;
-  gap: 8px;
+  gap: 2%;
 
-  flex: 0 0 fit-content;
+  height: 100%;
+  width: fit-content;
+
+  flex: 1 0 fit-content;
 }
