Fix layout of Dashboard page
List header no longer fills screen if no list items.

--- a/src/features/dashboard/styles/DashboardListItem.module.css
+++ b/src/features/dashboard/styles/DashboardListItem.module.css
@@ -16,7 +16,7 @@
   align-items: center;
   gap: 2%;
 
-  height: fit-content;
+  height: 60px;
   width: 100%;
 
   background-color: rgb(var(--dark));
