--- a/src/features/dashboard/styles/DashboardListHeader.module.css
+++ b/src/features/dashboard/styles/DashboardListHeader.module.css
@@ -6,18 +6,19 @@
   gap: 2%;
 
   min-height: 8%;
+  max-height: fit-content;
   width: 100%;
 
-  flex: 1 0 auto;
+  flex: 0 0 fit-content;
 
-  margin: 0;
+  margin-top: 2%;
   padding-bottom: 2px;
 }
 
 .header div {
   flex: 0 0 auto;
 
-  height: 100%;
+  height: fit-content;
   width: 18.4%;
 
   display: flex;
