--- a/src/components/button/styles/AltButton.module.css
+++ b/src/components/button/styles/AltButton.module.css
@@ -3,8 +3,9 @@
   justify-content: center;
   align-items: center;
 
-  max-height: 6vh;
-  max-width: 4vw;
+  flex: 0 0 auto;
+  height: 40px;
+  width: 60px;
 
   background-color: rgb(var(--accent1));
   border-color: var(--accent2);
