--- a/src/components/other/styles/Modal.module.css
+++ b/src/components/other/styles/Modal.module.css
@@ -8,8 +8,7 @@
 
   z-index: 10;
 
-  background-color: rgb(var(--dark));
-  opacity: 0.4;
+  background-color: rgb(var(--dark), 0.8);
 }
 
 .overlay {
@@ -18,9 +17,10 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  width: 26vw;
+  min-width: 40%;
+  width: fit-content;
   height: fit-content;
-  max-height: 60vh;
+  max-height: 60%;
 
   z-index: 100;
 
